src/test/deca/context/valid/without_class/multiple_variabl_declaration.deca
// Description :
//    test de la détection d'un backslash dans une chaîne de caractère
//
// Resultats :
//    ok
//
// Historique:
//    cree le 18/01/2023

{
    int a,b,c,d,e,f,g,h,i,j,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z;
}